<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/starNumber4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4_dp"
            android:layout_marginTop="@dimen/space_8_dp"
            app:layout_constraintStart_toEndOf="@+id/starNumber3"
            app:layout_constraintTop_toBottomOf="@+id/typeFilm"
            app:srcCompat="@drawable/star_icon" />

        <ImageView
            android:id="@+id/starNumber3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4_dp"
            android:layout_marginTop="@dimen/space_8_dp"
            app:layout_constraintStart_toEndOf="@+id/starNumber2"
            app:layout_constraintTop_toBottomOf="@+id/typeFilm"
            app:srcCompat="@drawable/star_icon" />

        <ImageView
            android:id="@+id/starNumber2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4_dp"
            android:layout_marginTop="@dimen/space_8_dp"
            app:layout_constraintStart_toEndOf="@+id/starNumber1"
            app:layout_constraintTop_toBottomOf="@+id/typeFilm"
            app:srcCompat="@drawable/star_icon" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/main_background"
            app:layout_constraintBottom_toBottomOf="@+id/nameFilm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/backInscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16_dp"
            android:layout_marginTop="@dimen/space_60_dp"
            android:text="@string/back_inscription"
            android:textColor="@color/inscription_color"
            android:textSize="@dimen/size_12_sp"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ageLimitInscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_16_dp"
            android:layout_marginTop="@dimen/space_120_dp"
            android:background="@drawable/textview_background"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="@dimen/space_4_dp"
            android:paddingBottom="@dimen/space_4_dp"
            android:text="@string/age_limit_inscription"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backInscription"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/nameFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="15"
            android:text="@string/film_name_avengers_end_game"
            android:textColor="@color/white"
            android:textSize="@dimen/size_40_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ageLimitInscription"
            app:layout_constraintTop_toBottomOf="@+id/ageLimitInscription" />

        <TextView
            android:id="@+id/typeFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4_dp"
            android:text="@string/type_of_film_avengers"
            android:textColor="@color/type_of_film_color"
            android:textSize="@dimen/size_14_sp"
            app:layout_constraintStart_toStartOf="@+id/nameFilm"
            app:layout_constraintTop_toBottomOf="@+id/nameFilm" />

        <ImageView
            android:id="@+id/starNumber1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8_dp"
            app:layout_constraintStart_toStartOf="@+id/typeFilm"
            app:layout_constraintTop_toBottomOf="@+id/typeFilm"
            app:srcCompat="@drawable/star_icon" />

        <ImageView
            android:id="@+id/starNumber5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_4_dp"
            android:layout_marginTop="@dimen/space_8_dp"
            app:layout_constraintStart_toEndOf="@+id/starNumber4"
            app:layout_constraintTop_toBottomOf="@+id/typeFilm"
            app:srcCompat="@drawable/star_icon_gray" />

        <TextView
            android:id="@+id/filmReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8_dp"
            android:layout_marginTop="@dimen/space_4_dp"
            android:text="@string/reviews_of_film_avengers"
            android:textColor="@color/review_counter_color"
            android:textSize="@dimen/size_14_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/starNumber5"
            app:layout_constraintTop_toBottomOf="@+id/typeFilm" />

        <TextView
            android:id="@+id/shortlineInspectionFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_28_dp"
            android:text="@string/storyline_inspection"
            android:textColor="@color/storyline_inspection_color"
            android:textSize="@dimen/size_14_sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/starNumber1"
            app:layout_constraintTop_toBottomOf="@+id/starNumber2" />

        <TextView
            android:id="@+id/shortlineOfFilm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_4_dp"
            android:alpha="0.75"
            android:paddingEnd="@dimen/space_16_dp"
            android:text="@string/storyline_of_film_avengers"
            android:textColor="#FFFFFF"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="@+id/shortlineInspectionFilm"
            app:layout_constraintTop_toBottomOf="@+id/shortlineInspectionFilm" />

        <TextView
            android:id="@+id/castInspection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_24_dp"
            android:text="@string/cast_inspection"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/shortlineOfFilm"
            app:layout_constraintTop_toBottomOf="@+id/shortlineOfFilm" />

        <ImageView
            android:id="@+id/imageViewRobert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_8_dp"
            app:layout_constraintEnd_toStartOf="@+id/imageViewEvans"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/castInspection"
            app:srcCompat="@drawable/robert_actor" />

        <ImageView
            android:id="@+id/imageViewEvans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/imageViewMark"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewRobert"
            app:layout_constraintTop_toTopOf="@+id/imageViewRobert"
            app:srcCompat="@drawable/evans_actor" />

        <ImageView
            android:id="@+id/imageViewMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/imageViewChris"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewEvans"
            app:layout_constraintTop_toTopOf="@+id/imageViewEvans"
            app:srcCompat="@drawable/mark_actor" />

        <ImageView
            android:id="@+id/imageViewChris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewMark"
            app:layout_constraintTop_toTopOf="@+id/imageViewMark"
            app:srcCompat="@drawable/chris_actor" />

        <TextView
            android:id="@+id/textViewRobertName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/name_robert_downey_jr_actor"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/imageViewRobert"
            app:layout_constraintStart_toStartOf="@+id/imageViewRobert"
            app:layout_constraintTop_toBottomOf="@+id/imageViewRobert" />

        <TextView
            android:id="@+id/textViewEvansName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/name_chris_evans_actor"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/imageViewEvans"
            app:layout_constraintStart_toStartOf="@+id/imageViewEvans"
            app:layout_constraintTop_toBottomOf="@+id/imageViewEvans" />

        <TextView
            android:id="@+id/textViewMarkName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/name_mark_ruffalo_actor"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/imageViewMark"
            app:layout_constraintStart_toStartOf="@+id/imageViewMark"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMark" />

        <TextView
            android:id="@+id/textViewChrisName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/name_chris_hemsworth_actor"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/imageViewChris"
            app:layout_constraintStart_toStartOf="@+id/imageViewChris"
            app:layout_constraintTop_toBottomOf="@+id/imageViewChris" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>