<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/main_background"
            app:layout_constraintBottom_toBottomOf="@+id/name_film"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/back_inscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/back_inscription"
            android:textColor="@color/inscription_color"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age_limit_inscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/textview_background"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@string/age_limit_inscription"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_inscription"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/name_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="15"
            android:text="@string/avengers_end_game_string"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/age_limit_inscription"
            app:layout_constraintTop_toBottomOf="@+id/age_limit_inscription" />

        <TextView
            android:id="@+id/type_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/type_of_film_abengers"
            android:textColor="@color/type_of_film_color"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/name_film"
            app:layout_constraintTop_toBottomOf="@+id/name_film" />

        <RatingBar
            android:id="@+id/rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:progressBackgroundTint="@color/white"
            android:rating="4"
            android:stepSize="0.1"
            app:layout_constraintStart_toStartOf="@+id/type_film"
            app:layout_constraintTop_toBottomOf="@+id/type_film"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/film_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/reviews_of_film_avengers"
            android:textColor="@color/review_counter_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/type_film" />

        <TextView
            android:id="@+id/shortline_inspection_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/storyline_inspection"
            android:textColor="@color/storyline_inspection_color"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/rating"
            app:layout_constraintTop_toBottomOf="@+id/rating"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/shortline_of_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.75"
            android:text="@string/storyline_of_film_avengers"
            android:textColor="@color/white"
            android:textStyle="normal"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shortline_inspection_film"
            app:layout_constraintTop_toBottomOf="@+id/shortline_inspection_film" />

        <TextView
            android:id="@+id/cast_inspection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast_inspection"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/shortline_of_film"
            app:layout_constraintTop_toBottomOf="@+id/shortline_of_film" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.04" />

        <ImageView
            android:id="@+id/image_view_robert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline_1"
            app:layout_constraintTop_toBottomOf="@+id/cast_inspection"
            app:srcCompat="@drawable/robert_actor" />

        <TextView
            android:id="@+id/text_view_robert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/name_robert_downey_jr_actor"
            android:textColor="@color/white"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/image_view_robert"
            app:layout_constraintStart_toStartOf="@+id/guideline_1"
            app:layout_constraintTop_toBottomOf="@+id/image_view_robert" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.28" />

        <ImageView
            android:id="@+id/image_view_evans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline_2"
            app:layout_constraintTop_toTopOf="@+id/image_view_robert"
            app:srcCompat="@drawable/evans_actor" />

        <TextView
            android:id="@+id/text_view_evans"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/name_chris_evans_actor"
            android:textColor="@color/white"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/image_view_evans"
            app:layout_constraintStart_toStartOf="@+id/guideline_2"
            app:layout_constraintTop_toBottomOf="@+id/image_view_evans" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.52" />

        <ImageView
            android:id="@+id/image_view_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline_3"
            app:layout_constraintTop_toTopOf="@+id/image_view_robert"
            app:srcCompat="@drawable/mark_actor" />

        <TextView
            android:id="@+id/text_view_mark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/name_chris_evans_actor"
            android:textColor="@color/white"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/image_view_mark"
            app:layout_constraintStart_toStartOf="@+id/guideline_3"
            app:layout_constraintTop_toBottomOf="@+id/image_view_mark" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.76" />

        <ImageView
            android:id="@+id/image_view_chris"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/guideline_4"
            app:layout_constraintTop_toTopOf="@+id/image_view_robert"
            app:srcCompat="@drawable/chris_actor" />

        <TextView
            android:id="@+id/text_view_chris"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/name_chris_hemsworth_actor"
            android:textColor="@color/white"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@+id/image_view_chris"
            app:layout_constraintStart_toStartOf="@+id/guideline_4"
            app:layout_constraintTop_toBottomOf="@+id/image_view_mark" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>